# Diploma-ELN

./: .env.example  .gitignore  .pylintrc  README.md  dataset.json  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  Makefile  base.py  config.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0000_start.py  0001_user_reworked_profile_added.py  0002_username_added_in_user.py  0003_experiments_added.py  0004_rework_experiments.py  0005_ontology_support.py  0006_constraints.py  0007_single_experiments_table.py  0008_additional_constraints.py  0009_measurements_linked_to_columns.py  0010_timezone_issues.py  0011_ontologies_table_removed.py  0012_column_is_main_flag.py  0013_templates_path.py  0014_templates_owner.py  0015_comp_exp_data_has_row.py  0016_profile_extended.py  011b4a2a7d81_user_reworked_profile_added.py  7e6f7fbd3be0_username_added_in_user.py  8e5cd8a0116f_experiments_added.py  b9cb9acd9127_start.py
backend/auth/: auth.py  models.py  utils.py  validation.py
backend/common/: enums.py
backend/config/: config.example.toml  config.template.toml
backend/db/: __init__.py  base.py  users.py  utils.py
backend/env/: .env.example
backend/experiments/: experiments.py
backend/models/: __init__.py  base.py  experiment.py  user.py  users.py  utils.py
backend/models/ontology/: base.py
backend/models/ontology/om2/: om2.py  queries.py  services.py
backend/ontology/: base.py  models.py
backend/ontology/om2/: models.py  queries.py  services.py
backend/routes/: auth.py  experiments.py  user.py  users.py
backend/routes/auth/: auth.py  utils.py  validation.py
backend/routes/experiments/: experiments.py  utils.py
backend/routes/ontologies/: ontologies.py
backend/routes/templates/: templates.py
backend/schemas/: auth.py  experiments.py  user.py  users.py
backend/schemas/experiments/: data.py  requests.py
backend/schemas/ontologies/: common.py
backend/schemas/ontologies/chebi/: requests.py
backend/schemas/ontologies/om2/: data.py  requests.py
backend/schemas/templates/: data.py  requests.py
backend/services/: auth.py  experiments.py  user.py  users.py
backend/services/experiments/: graph.py  relational.py
backend/services/experiments/relational/: common.py  creators.py  getters.py  updaters.py  utils.py
backend/services/ontologies/: chebi.py  om2.py  ontologies.py
backend/services/templates/: templates.py
backend/tests/: conftest.py
backend/tests/routes/auth/: test_auth.py  test_utils.py  test_validation.py
backend/tests/routes/experiments/: test_experiments.py  test_utils.py
backend/tests/services/: test_auth.py  test_user.py
backend/tests/services/experiments/relational/: test_creators.py  test_getters.py  test_updaters.py  test_utils.py
backend/tests/services/templates/: test_templates.py
docs/: RO.tex  TP.tex  TZ_legacy.tex  references.bib  styledoc19.sty
frontend/: Dockerfile  index.html  package-lock.json  (+3 more)
(+102 files in other folders)
