[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
jinja2 = "^3.1.4"
python-multipart = "^0.0.19"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
pydantic = {extras = ["email"], version = "^2.10.4"}
bcrypt = "^4.2.1"
pyjwt = "^2.10.1"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
neo4j = "^5.27.0"
polars = "^1.19.0"
cryptography = "^44.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.13.0"
isort = "^5.13.2"
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
known_first_party = ["backend"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "alembic", "pyjwt", "bcrypt", "neo4j"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"